support 2 langs in truck owner pages - Done by Marah

--- a/frontend/assets/langs/ar.json
+++ b/frontend/assets/langs/ar.json
@@ -31,5 +31,95 @@
   "resendcode": " أعد إرسال الرمز ",
   "4digitcode": " رمز من 4 أرقام",
   "verifiying": "التحقق",
-  "verifycode": "تم التحقق"
+  "verifycode": "تم التحقق",
+  "welcome_owner": "مرحباً، مالك الشاحنة!",
+  "total_orders": "إجمالي الطلبات",
+  "bookings": "الحجوزات",
+  "reviews": "المراجعات",
+  "quick_actions": "الإجراءات السريعة",
+  "add_truck": "إضافة شاحنة",
+  "view_trucks": "عرض الشاحنات",
+  "manage_availability": "إدارة التوفر",
+  "view_orders": "عرض الطلبات",
+  "event_bookings": "حجوزات الفعاليات",
+  "language": "اللغة",
+  "you_dont_have_trucks": "ليس لديك أي شاحنات حتى الآن.",
+  "truck_name": "اسم الشاحنة",
+  "select_a_Truck": "اختر شاحنة",
+  "Unavailable": "غير متاح",
+  "Available": "متاح",
+  "Today": "اليوم",
+  "plz_fill_all_fields": "يرجى ملء جميع الحقول واختيار الصورة.",
+  "image_upload_failed": "فشل تحميل الصورة.",
+  "failed_to_add_menu_item": "فشل في إضافة عنصر القائمة",
+  "add_menu_item": "إضافة عنصر القائمة",
+  "item_name": "اسم المنتج",
+  "enter_item_name": "أدخل اسم المنتج",
+  "description": "الوصف",
+  "price": "السعر",
+  "enter_price": "أدخل السعر",
+  "category": "الفئة",
+  "tap_to_select_image": "اضغط لاختيار صورة",
+  "available": "متوفر",
+  "add_item": "أضف المنتج",
+  "please_complete_all_fields": "يرجى إكمال جميع الحقول.",
+  "failed_to_update_item": "فشل في تحديث العنصر.",
+  "edit_menu_item": "تعديل عنصر القائمة",
+  "save_changes": "حفظ التغييرات",
+  "item_deleted": "تم حذف العنصر.",
+  "failed_to_delete_item": "فشل في حذف العنصر.",
+  "my_menu": "قائمتي",
+  "orders_by_truck": "الطلبات حسب الشاحنة",
+  "no_orders_for_this_truck": "لا توجد طلبات لهذه الشاحنة.",
+  "order_by": "طلب من",
+  "status": "الحالة",
+  "placed_on": "تم الطلب في",
+  "qty": "الكمية",
+  "update_status": "تحديث الحالة",
+  "Pending": "قيد الانتظار",
+  "Preparing": "قيد التحضير",
+  "Ready": "جاهز",
+  "Completed": "مكتمل",
+  "truck_added_successfully": "تمت إضافة الشاحنة بنجاح",
+  "ok": "تمام",
+  "cuisine_type": "نوع المأكولات",
+  "opening_time": "وقت الفتح",
+  "closing_time": "وقت الإغلاق",
+  "tap_to_select_logo": "اضغط لاختيار شعار الشاحنة",
+  "required_field": "هذا الحقل مطلوب.",
+  "failed_to_add_truck": "❌ فشل في إضافة الشاحنة.",
+  "fill_all_fields_image_city": "❌ يرجى إكمال جميع الحقول، واختيار المدينة، وتحميل الشعار.",
+  "edit_truck": "تعديل الشاحنة",
+  "opening_time_hint": "وقت الفتح (مثال: 10:00 ص)",
+  "closing_time_hint": "وقت الإغلاق (مثال: 10:00 م)",
+  "image_upload_success": "✅ تم رفع الصورة بنجاح.",
+  "upload_failed": "❌ فشل الرفع",
+  "failed_to_update_truck": "❌ فشل في تحديث الشاحنة.",
+  "my_trucks": "شاحناتي",
+  "no_trucks_found": "لم يتم العثور على شاحنات.",
+  "cuisine": "نوع المأكولات",
+  "not_specified": "غير محدد",
+  "hours": "ساعات العمل",
+  "manage_menu": "إدارة القائمة",
+  "confirm_delete_title": "تأكيد الحذف",
+  "confirm_delete_msg": "هل أنت متأكد أنك تريد حذف هذه الشاحنة؟",
+  "cancel": "إلغاء",
+  "delete": "حذف",
+  "edit":"تعديل",
+  "truck_deleted_success": "✅ تم حذف الشاحنة بنجاح.",
+  "failed_to_delete_truck": "❌ فشل في حذف الشاحنة.",
+  "failed_to_fetch_trucks": "❌ فشل في جلب الشاحنات.",
+  "failed_to_load_trucks": "فشل تحميل الشاحنات",
+  "error_occurred": "حدث خطأ",
+  "city_ramallah": "رام الله",
+  "city_nablus": "نابلس",
+  "city_bethlehem": "بيت لحم",
+  "city_hebron": "الخليل",
+  "city_jericho": "أريحا",
+  "city_tulkarm": "طولكرم",
+  "city_jenin": "جنين",
+  "city_qalqilya": "قلقيلية",
+  "city_salfit": "سلفيت",
+  "city_tubas": "طوباس",
+  "city_gaza": "غزة"
 }
