--- a/frontend/assets/langs/en.json
+++ b/frontend/assets/langs/en.json
@@ -31,5 +31,95 @@
   "resendcode": "Resend Code",
   "4digitcode": "4-digit Code",
   "verifiying": "Verifying...",
-  "verifycode": "Verify Code"
+  "verifycode": "Verify Code",
+  "welcome_owner": "Welcome, Truck Owner!",
+  "total_orders": "Total Orders",
+  "bookings": "Bookings",
+  "reviews": "Reviews",
+  "quick_actions": "Quick Actions",
+  "add_truck": "Add Truck",
+  "view_trucks": "View Trucks",
+  "manage_availability": "Manage Availability",
+  "view_orders": "View Orders",
+  "event_bookings": "Event Bookings",
+  "language": "Language",
+  "you_dont_have_trucks": "You don’t have any trucks yet.",
+  "truck_name": "truck_name",
+  "select_a_Truck": "Select a Truck",
+  "Unavailable": "Unavailable",
+  "Available": "Available",
+  "Today": "Today",
+  "plz_fill_all_fields": "Please fill all fields and select an image.",
+  "image_upload_failed": "Image upload failed.",
+  "failed_to_add_menu_item": "Failed to add menu item",
+  "add_menu_item": "Add Menu Item",
+  "item_name": "Item Name",
+  "enter_item_name": "Enter item name",
+  "description": "Description",
+  "price": "Price",
+  "enter_price": "Enter price",
+  "category": "Category",
+  "tap_to_select_image": "Tap to select image",
+  "available": "Available",
+  "add_item": "Add Item",
+  "please_complete_all_fields": "Please complete all fields.",
+  "failed_to_update_item": "Failed to update item.",
+  "edit_menu_item": "Edit Menu Item",
+  "save_changes": "Save Changes",
+  "item_deleted": "Item deleted",
+  "failed_to_delete_item": "Failed to delete item",
+  "my_menu": "My Menu",
+  "orders_by_truck": "Orders by Truck",
+  "no_orders_for_this_truck": "No orders for this truck",
+  "order_by": "Order by",
+  "status": "Status",
+  "placed_on": "Placed on",
+  "qty": "Qty",
+  "update_status": "Update Status",
+  "Pending": "Pending",
+  "Preparing": "Preparing",
+  "Ready": "Ready",
+  "Completed": "Completed",
+  "truck_added_successfully": "Truck Added Successfully!",
+  "ok": "OK",
+  "cuisine_type": "Cuisine Type",
+  "opening_time": "Opening Time",
+  "closing_time": "Closing Time",
+  "tap_to_select_logo": "Tap to select truck logo",
+  "required_field": "This field is required.",
+  "failed_to_add_truck": "❌ Failed to add truck.",
+  "fill_all_fields_image_city": "❌ Please complete all fields, select a city, and choose a logo.",
+  "edit_truck": "Edit Truck",
+  "opening_time_hint": "Opening Time (e.g., 10:00 AM)",
+  "closing_time_hint": "Closing Time (e.g., 10:00 PM)",
+  "image_upload_success": "✅ Image uploaded successfully.",
+  "upload_failed": "❌ Upload failed",
+  "failed_to_update_truck": "❌ Failed to update truck.",
+  "my_trucks": "My Trucks",
+  "no_trucks_found": "No trucks found.",
+  "cuisine": "Cuisine",
+  "not_specified": "Not specified",
+  "hours": "Hours",
+  "manage_menu": "Manage Menu",
+  "confirm_delete_title": "Confirm Deletion",
+  "confirm_delete_msg": "Are you sure you want to delete this truck?",
+  "cancel": "Cancel",
+  "delete": "Delete",
+  "edit":"Edit",
+  "truck_deleted_success": "✅ Truck deleted successfully.",
+  "failed_to_delete_truck": "❌ Failed to delete truck.",
+  "failed_to_fetch_trucks": "❌ Failed to fetch trucks.",
+  "error_occurred": "Error",
+  "failed_to_load_trucks": "failed to load trucks",
+  "city_ramallah": "Ramallah",
+  "city_nablus": "Nablus",
+  "city_bethlehem": "Bethlehem",
+  "city_hebron": "Hebron",
+  "city_jericho": "Jericho",
+  "city_tulkarm": "Tulkarm",
+  "city_jenin": "Jenin",
+  "city_qalqilya": "Qalqilya",
+  "city_salfit": "Salfit",
+  "city_tubas": "Tubas",
+  "city_gaza": "Gaza"
 }
