--- a/frontend/assets/langs/en.json
+++ b/frontend/assets/langs/en.json
@@ -32,6 +32,12 @@
   "4digitcode": "4-digit Code",
   "verifiying": "Verifying...",
   "verifycode": "Verify Code",
+    "new_password": "New Password",
+  "confirm_password": "Confirm Password",
+  "passwords_do_not_match": "❌ Passwords do not match",
+  "password_reset_successful": "✅ Password reset successful",
+  "failed_to_reset_password": "❌ Failed to reset password",
+  "confirm": "Confirm",
   "welcome_owner": "Welcome, Truck Owner!",
   "total_orders": "Total Orders",
   "bookings": "Bookings",
