translate booking page

--- a/frontend/assets/langs/ar.json
+++ b/frontend/assets/langs/ar.json
@@ -32,12 +32,12 @@
   "4digitcode": " رمز من 4 أرقام",
   "verifiying": "التحقق",
   "verifycode": "تم التحقق",
-    "new_password": "كلمة المرور الجديدة",
+  "new_password": "كلمة المرور الجديدة",
   "confirm_password": "تأكيد كلمة المرور",
   "passwords_do_not_match": "❌ كلمات المرور غير متطابقة",
   "password_reset_successful": "✅ تم إعادة تعيين كلمة المرور بنجاح",
   "failed_to_reset_password": "❌فشل إعادة تعيين كلمة المرور",
-  "confirm": "تأكيد"
+  "confirm": "تأكيد",
   "welcome_owner": "مرحباً، مالك الشاحنة!",
   "total_orders": "إجمالي الطلبات",
   "bookings": "الحجوزات",
@@ -111,7 +111,7 @@
   "confirm_delete_msg": "هل أنت متأكد أنك تريد حذف هذه الشاحنة؟",
   "cancel": "إلغاء",
   "delete": "حذف",
-  "edit":"تعديل",
+  "edit": "تعديل",
   "truck_deleted_success": "✅ تم حذف الشاحنة بنجاح.",
   "failed_to_delete_truck": "❌ فشل في حذف الشاحنة.",
   "failed_to_fetch_trucks": "❌ فشل في جلب الشاحنات.",
@@ -127,5 +127,16 @@
   "city_qalqilya": "قلقيلية",
   "city_salfit": "سلفيت",
   "city_tubas": "طوباس",
-  "city_gaza": "غزة"
+  "city_gaza": "غزة",
+  "manage_bookings": " إدارة الحجوزات",
+  "select_a_truck": "اختر شاحنة",
+  "unnamed_truck": "شاحنة بدون اسم",
+  "confirmed": " مؤكد",
+  "rejected": " مرفوض",
+  "no_bookings_found": " لم يتم العثور على أي حجوزات.",
+  "pending": "قيد الانتظار",
+  "event": "الفعالية",
+  "guests": "عدد الضيوف",
+  "approve": "قبول",
+  "reject": "رفض"
 }
