--- a/frontend/assets/langs/en.json
+++ b/frontend/assets/langs/en.json
@@ -32,7 +32,7 @@
   "4digitcode": "4-digit Code",
   "verifiying": "Verifying...",
   "verifycode": "Verify Code",
-    "new_password": "New Password",
+  "new_password": "New Password",
   "confirm_password": "Confirm Password",
   "passwords_do_not_match": "❌ Passwords do not match",
   "password_reset_successful": "✅ Password reset successful",
@@ -111,7 +111,7 @@
   "confirm_delete_msg": "Are you sure you want to delete this truck?",
   "cancel": "Cancel",
   "delete": "Delete",
-  "edit":"Edit",
+  "edit": "Edit",
   "truck_deleted_success": "✅ Truck deleted successfully.",
   "failed_to_delete_truck": "❌ Failed to delete truck.",
   "failed_to_fetch_trucks": "❌ Failed to fetch trucks.",
@@ -127,5 +127,16 @@
   "city_qalqilya": "Qalqilya",
   "city_salfit": "Salfit",
   "city_tubas": "Tubas",
-  "city_gaza": "Gaza"
+  "city_gaza": "Gaza",
+  "manage_bookings": "Manage Bookings",
+  "select_a_truck": "Select a Truck",
+  "unnamed_truck": "Unnamed Truck",
+  "confirmed": "confirmed",
+  "rejected": "Rejected",
+  "no_bookings_found": "No bookings found.",
+  "pending": "Pending",
+  "event": "Event",
+  "guests": "Guests",
+  "approve": "Approve",
+  "reject": "Reject"
 }
