--- a/frontend/assets/langs/ar.json
+++ b/frontend/assets/langs/ar.json
@@ -37,7 +37,7 @@
   "passwords_do_not_match": "❌ كلمات المرور غير متطابقة",
   "password_reset_successful": "✅ تم إعادة تعيين كلمة المرور بنجاح",
   "failed_to_reset_password": "❌فشل إعادة تعيين كلمة المرور",
-  "confirm": "تأكيد"
+  "confirm": "تأكيد",
   "welcome_owner": "مرحباً، مالك الشاحنة!",
   "total_orders": "إجمالي الطلبات",
   "bookings": "الحجوزات",
