--- a/frontend/assets/langs/en.json
+++ b/frontend/assets/langs/en.json
@@ -142,7 +142,7 @@
   "set_total_amount": "Set Total Amount",
   "enter_total_amount": "Enter total amount (₪)",
   "total_amount": "Total Amount",
-  "booking_confirmed": "Booking confirmed with ₪{}",
+  "booking_confirmed": "Booking confirmed with (₪)",
   "booking_rejected": "Booking rejected",
   "failed_to_confirm_booking": "Failed to confirm booking",
   "failed_to_reject_booking": "Failed to reject booking"
