chart for orders in weekdays + BE+FE for capacity of parallel orders

--- a/frontend/assets/langs/ar.json
+++ b/frontend/assets/langs/ar.json
@@ -145,5 +145,6 @@
   "booking_confirmed": "تم تأكيد الحجز بمبلغ (₪)",
   "booking_rejected": "تم رفض الحجز",
   "failed_to_confirm_booking": "فشل في تأكيد الحجز",
-  "failed_to_reject_booking": "فشل في رفض الحجز"
+  "failed_to_reject_booking": "فشل في رفض الحجز",
+  "new_feature": "الإحصائيات والتقارير"
 }
